// -*- mode: protobuf -*-
//
// Schemas for messages that are specific to Beancount's parser output. These
// are only used for the intermediate state of the parsed data, merely
// representing the production of the parser, before the subsequent processing
// (booking) that will produce the finalized directives.
//
// The data structures seen here are not visible in the final output nor to the
// regular plugins, which see the resolved ones produced after booking and
// interpolation.

syntax = "proto2";

package beancount.inter;

import 'beancount/ccore/number.proto';
import 'beancount/ccore/date.proto';

// Arithmetic expressions to be evaluated later with Decimal context.
message Expr {
  // Which operator this represents in the tree.
  optional ExprOp op = 1;

  // Terminal value for 'NUM'.
  optional beancount.Number number = 2;

  // Binary arguments.
  optional Expr arg1 = 3;
  optional Expr arg2 = 4;
}

// Operators of expressions.
enum ExprOp {
  NUM = 0;
  ADD = 1;
  SUB = 2;
  MUL = 3;
  DIV = 4;
  NEG = 5; // Unary
  PLUS = 6; // Unary
}

// A container for all the parser specs produced on a posting.
// These are the objects that directly represent the parsed input yet to be
// interpolated and booked.
message Spec {
  // A UnitSpec instance.
  optional UnitSpec units = 8;

  // A CostSpec instance. Warning: This partically filled field is only used in
  // the production of the intermediate representation produced by the parser
  // and never set in the final processed output from Beancount. Do not use
  // this.
  optional CostSpec cost = 9;

  // A PriceSpec instance.
  optional PriceSpec price = 10;
}

// A unit specification. This is like `Amount`, except that either the number or
// currency can be missing.
message UnitSpec {
  // Finalized value in 'number' and original expression in 'expr'.
  optional beancount.Number number = 1;
  optional Expr expr = 2;

  // The unit currency for the enclosing posting.
  optional string currency = 3;
}

// A price specification. This is similar to `Amount`, except that either the
// number or currency can be missing.
message PriceSpec {
  // Finalized value in 'number' and original expression in 'expr'.
  optional beancount.Number number = 1;
  optional Expr expr = 2;

  // The quote currency for the enclosing posting.
  optional string currency = 3;

  // A flag that determines whether the expression above refers to a per-unit
  // price or a total price, yet to be calculated.
  optional bool is_total = 4;
}

// A cost specification, which still requires to be filled in, and the final
// per-unit numbers be calculated. This gets translated to Cost after booking
// and interpolation.
message CostSpec {
  // A decimal number, exclusive the per-unit cost.
  // TODO(blais): Rename this to number_per_unit; it's been annoying.
  optional beancount.Number number_per = 1;

  // A decimal number, the total cost/price.
  optional beancount.Number number_total = 2;

  // A string, the commodity of the cost.
  optional string currency = 3;

  // A datetime.date for the date that the lot was created at. There should
  // always be a valid date.
  optional beancount.Date date = 4;

  // A string for the label of this lot, or None, if there is no label.
  optional string label = 5;

  // A flag explicitly indicating to merge all matching lots and compute the
  // average cost.
  optional bool merge_cost = 6;
}
